tests/ui/c-variadic/variadic-ffi-6.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/variadic-ffi-6.rs:3:67
   |
LL | pub unsafe extern "C" fn use_vararg_lifetime(x: usize, y: ...) -> &usize {
   |                                                                   ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL | pub unsafe extern "C" fn use_vararg_lifetime(x: usize, y: ...) -> &'static usize {
   |                                                                    +++++++
help: instead, you are more likely to want to change one of the arguments to be borrowed...
   |
LL | pub unsafe extern "C" fn use_vararg_lifetime(x: &usize, y: ...) -> &usize {
   |                                                 +
help: ...or alternatively, you might want to return an owned value
   |
LL - pub unsafe extern "C" fn use_vararg_lifetime(x: usize, y: ...) -> &usize {
LL + pub unsafe extern "C" fn use_vararg_lifetime(x: usize, y: ...) -> usize {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
